fix line wrapping on cards, load profile from user store
white-space: pre-wrap my beloved
if a user already logged in, use their info in the svelte store, else make an api hit like normal, this could be used to allow the group hit at the same time

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -41,7 +41,7 @@ $text: #dddddc;
 }
 
 :global(p) {
-    white-space: pre;
+    white-space:pre-wrap;
 }
 
 .container {
